# phibench

./: .gitignore  CLAUDE.md  PLAN.md  README.md  analyze_results.py  config.json  run_benchmark.py
cuda/: CMakeLists.txt
cuda/include/phi/: phi.hpp
cuda/include/phi/compute/: big_phi.hpp  small_phi.hpp
cuda/include/phi/core/: types.hpp
cuda/include/phi/data/: repertoire.hpp  tpm.hpp
cuda/include/phi/metrics/: emd.hpp
cuda/include/phi/partition/: bipartition.hpp
cuda/src/: main.cpp
cuda/src/compute/: big_phi.cpp  small_phi.cpp
cuda/src/core/: types.cpp
cuda/src/data/: repertoire.cpp  tpm.cpp
cuda/src/metrics/: emd.cpp
cuda/src/partition/: bipartition.cpp
cuda/tests/: generate_validation_data.py  test_bigphi.cpp  test_pyphi_comprehensive.cpp  test_validation.cpp  validation_data.hpp  validation_data.json
docs/: index.html
results/: benchmark_config.json  visualization_data.json
results/phi_results/: all_results.csv
src/: __init__.py  batch_processor.py  network_generator.py  storage.py
